update docker
